--- a/sass/src-sass/global.sass
+++ b/sass/src-sass/global.sass
@@ -164,7 +164,10 @@ body
             color: #1A3B5A
             margin: 0
 
-// SLICK-DOTS
+// SLICK
+.slick-arrow
+    display: none !important
+
 .slick-dots
     bottom: -50px !important
     width: 200px !important
@@ -331,6 +334,10 @@ body
                 background: #53F3A6
                 padding: 10px
                 border-radius: 50px
+
+// PARTNERS-SECTION 
+.partners-section
+    margin: 5rem 0
 
 // GOOGLE MAP
 #googlemap
